--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   <header>
     <div class="main-container header-container">
       <div class="logo">
-        <a href="main.html">
+        <a href="index.html">
           <img src="img/logo.jpg" alt="로고" height="40">
         </a>
       </div>
