--- a/contact.html
+++ b/contact.html
@@ -36,13 +36,13 @@
     }
 
     .logo img {
-      height: 40px;
+      height: 54px;
     }
 
     nav ul {
       list-style: none;
       display: flex;
-      gap: 20px;
+      gap: 60px;
       margin: 0;
       padding: 0;
     }
@@ -52,6 +52,7 @@
       text-decoration: none;
       color: var(--main-blue);
       font-weight: bold;
+      font-size: 1.4rem;
       transition: transform 0.3s ease;
     }
 
@@ -93,6 +94,8 @@
     .intro-text {
       flex: 2 1 600px;
       padding: 40px;
+      font-size: 1.1rem;
+      line-height: 1.6;
     }
 
     .fade-in-paragraph {
@@ -161,6 +164,7 @@
       <ul>
         <li><a href="contact.html">회사소개</a></li>
         <li><a href="portfolio.html">공사이력</a></li>
+        <li><a href="inquiry.html">공사문의</a></li>
       </ul>
     </nav>
   </div>
@@ -197,7 +201,7 @@
       사무실・상가・주택 리모델링까지, <strong>합리적인 비용과 성실한 시공</strong>으로<br>
       최상의 결과를 약속드립니다.</p>
 
-    <p class="fade-in-paragraph" style="margin-top: 30px; font-weight: bold;">대표이사 문영주</p>
+    <p class="fade-in-paragraph" style="margin-top: 30px; font-weight: bold;">대표 문영주</p>
     <p class="fade-in-paragraph" style="color: #666;">Young-Joo Moon, President, CEO</p>
 
     <div style="margin-top: 30px;">
