--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     }
 
     .logo img {
-      height: 40px;
+      height: 54px;
     }
 
     nav ul {
       list-style: none;
       display: flex;
-      gap: 20px;
+      gap: 60px;
       margin: 0;
       padding: 0;
     }
@@ -48,6 +48,7 @@
       text-decoration: none;
       color: #010080;
       font-weight: bold;
+      font-size: 1.4rem;
       transition: transform 0.3s ease;
     }
 
@@ -146,10 +147,11 @@
     .view-portfolio-btn {
       position: relative;
       display: inline-block;
-      padding: 10px 20px;
+      padding: 14px 28px;
       background: transparent;
       color: #010080;
       font-weight: bold;
+      font-size: 1.4rem;
       text-decoration: none;
       overflow: hidden;
       border: none;
@@ -208,7 +210,7 @@
     <div class="main-container header-container">
       <div class="logo">
         <a href="index.html">
-          <img src="img/logo.jpg" alt="로고" height="40">
+          <img src="img/logo.jpg" alt="로고">
         </a>
       </div>
       
@@ -216,6 +218,7 @@
         <ul>
           <li><a href="contact.html">회사소개</a></li>
           <li><a href="portfolio.html">공사이력</a></li>
+          <li><a href="inquiry.html">공사문의</a></li>
         </ul>
       </nav>
     
@@ -247,7 +250,7 @@
       </div>
     </div>
     <div class="view-portfolio-wrapper">
-      <a class="view-portfolio-btn" href="portfolio.html">공사이력 보러가기</a>
+      <a class="view-portfolio-btn" href="inquiry.html">공사문의</a>
     </div>
   </section>
 
