--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>인테리어 포트폴리오</title>
   
+  <!-- Open Graph 메타태그 (카카오톡 링크 미리보기용) -->
+  <meta property="og:title" content="아트아이디 - 인테리어 전문 업체">
+  <meta property="og:description" content="사무실, 상가, 주택 등 다양한 공간의 인테리어 전문 업체입니다">
+  <meta property="og:image" content="https://www.artid.co.kr/img/slide1.jpg">
+  <meta property="og:url" content="https://www.artid.co.kr">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="아트아이디">
+  
   <style>
     body {
       margin: 0;
