--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>회사소개 - 아트아이디</title>
+  
+  <!-- Open Graph 메타태그 (카카오톡 링크 미리보기용) -->
+  <meta property="og:title" content="아트아이디 - 인테리어 전문 업체">
+  <meta property="og:description" content="사무실, 상가, 주택 등 다양한 공간의 인테리어 전문 업체입니다">
+  <meta property="og:image" content="https://www.artid.co.kr/img/slide1.jpg">
+  <meta property="og:url" content="https://www.artid.co.kr">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="아트아이디">
   <style>
     :root {
       --main-blue: #010080;
