--- a/inquiry.html
+++ b/inquiry.html
@@ -299,7 +299,7 @@
   <section class="main-visual">
     <div class="text">
       <h1>Construction Inquiry</h1>
-      <p>전문적인 인테리어 공사 문의를 남겨주세요</p>
+      <p>당신의 꿈을 현실로 만드는 인테리어</p>
     </div>
   </section>
 
