--- a/portfolio.html
+++ b/portfolio.html
@@ -591,7 +591,7 @@
         <div class="thumb-card" data-category="${item.category}" data-title="${item.title}" data-desc="${item.desc}">
           <img src="img/${item.image}" alt="${item.category}">
           <div class="thumb-title">${item.title}</div>
-          <div class="thumb-overlay">공사문의</div>
+          <div class="thumb-overlay">${item.title}</div>
         </div>
       `).join('');
       
