--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       top: 50%;
       transform: translateY(-50%);
       font-size: 2rem;
-      background: rgba(0,0,0,0.3);
+      background: transparent;
       color: white;
       padding: 10px;
       cursor: pointer;
