--- a/contact.html
+++ b/contact.html
@@ -154,6 +154,26 @@
       .container {
         padding: 0 40px;
       }
+
+      .header-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+      }
+
+      nav {
+        width: 100%;
+        text-align: center;
+      }
+
+      nav ul {
+        justify-content: center;
+        gap: 30px;
+      }
+
+      nav ul li a {
+        font-size: 1.2rem;
+      }
     }
     
 
