--- a/index.html
+++ b/index.html
@@ -211,6 +211,32 @@
       height: 70px;
       object-fit: contain;
     }
+
+    @media (max-width: 768px) {
+      .main-container {
+        padding: 0 20px;
+      }
+
+      .header-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+      }
+
+      nav {
+        width: 100%;
+        text-align: center;
+      }
+
+      nav ul {
+        justify-content: center;
+        gap: 30px;
+      }
+
+      nav ul li a {
+        font-size: 1.2rem;
+      }
+    }
   </style>
 </head>
 <body>
