--- a/inquiry.html
+++ b/inquiry.html
@@ -274,6 +274,26 @@
       .inquiry-title h2 {
         font-size: 2rem;
       }
+
+      .header-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+      }
+
+      nav {
+        width: 100%;
+        text-align: center;
+      }
+
+      nav ul {
+        justify-content: center;
+        gap: 30px;
+      }
+
+      nav ul li a {
+        font-size: 1.2rem;
+      }
     }
   </style>
 </head>
