--- a/contact.html
+++ b/contact.html
@@ -404,7 +404,7 @@
       <div class="footer-top">
         <div class="footer-help">
           <h3>공사문의는 언제든지 전화주세요</h3>
-          <div class="phone">010-2356-9987</div>
+          <div class="phone">010-2356-9987 / 031-242-0455</div>
         </div>
         
         <div class="footer-center">
@@ -441,7 +441,7 @@
       <div class="footer-info">
         <p>경기 수원시 장안구 송정로138번길 13 백산빌딩 6층 601호 | TEL : 031-242-0455</p>
         <div class="footer-copyright">
-          <p>COPYRIGHT &copy; 2025 아트아이디. ALL RIGHTS RESERVED.</p>
+          <p>COPYRIGHT &copy; 1998 아트아이디. ALL RIGHTS RESERVED.</p>
         </div>
       </div>
     </div>
