--- a/portfolio.html
+++ b/portfolio.html
@@ -165,9 +165,11 @@
       text-align: center;
       font-weight: bold;
       font-size: 1rem;
-      transition: background-color 0.3s ease;
+      transition: background-color 0.3s ease, color 0.3s ease;
       background-color: var(--main-blue);
       border-radius: 4px;
+      border: 2px solid transparent;
+      box-sizing: border-box;
     }
 
     .menu-buttons a:first-child {
@@ -177,7 +179,9 @@
 
 
     .menu-buttons a:hover {
-      background-color: rgba(255,255,255,0.1);
+      background-color: white;
+      color: var(--main-blue);
+      border: 2px solid var(--main-blue);
     }
 
     .category-content {
@@ -226,7 +230,7 @@
       opacity: 1 !important;
       transform: translateY(0) !important;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
-      aspect-ratio: 4/3;
+      aspect-ratio: 16/9;
     }
 
     .thumb-card:hover {
@@ -357,7 +361,7 @@
 
     .thumbnail-item {
       flex-shrink: 0;
-      width: 108px;
+      width: 128px;
       height: 72px;
       cursor: pointer;
       border: 3px solid transparent;
@@ -687,7 +691,7 @@
           <li>상가</li>
           <li>사무실</li>
           <li>주택</li>
-          <li>기타</li>
+          <li>기타 리모델링</li>
         </ul>
         <div class="menu-buttons">
           <a href="https://blog.naver.com/artid98" target="_blank">블로그 방문</a>
@@ -700,7 +704,7 @@
           <div>상가</div>
           <div>사무실</div>
           <div>주택</div>
-          <div>기타</div>
+          <div>기타 리모델링</div>
         </div>
 
         <div class="thumbnail-grid" id="thumbnail-grid">
@@ -732,7 +736,7 @@
       <div class="footer-top">
         <div class="footer-help">
           <h3>공사문의는 언제든지 전화주세요</h3>
-          <div class="phone">010-2356-9987</div>
+          <div class="phone">010-2356-9987 / 031-242-0455</div>
         </div>
         
         <div class="footer-center">
@@ -769,7 +773,7 @@
       <div class="footer-info">
         <p>경기 수원시 장안구 송정로138번길 13 백산빌딩 6층 601호 | TEL : 031-242-0455</p>
         <div class="footer-copyright">
-          <p>COPYRIGHT &copy; 2025 아트아이디. ALL RIGHTS RESERVED.</p>
+          <p>COPYRIGHT &copy; 1998 아트아이디. ALL RIGHTS RESERVED.</p>
         </div>
       </div>
     </div>
